replaced system with standard

--- a/entity-understanding-layer-mfp.html
+++ b/entity-understanding-layer-mfp.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="description"
-        content="Entity Understanding Layer — Machine-Oriented Structural Summary. Foundational representational architecture governing how AI systems form, maintain, and update entity understanding within the EntityWorks system.">
+        content="Entity Understanding Layer — Machine-Oriented Structural Summary. Foundational representational architecture governing how AI systems form, maintain, and update entity understanding within the EntityWorks standard.">
   <link rel="canonical" href="https://entityworks.ai/entity-understanding-layer-mfp.html">
 
   <!-- Favicon -->
@@ -115,7 +115,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Entity Understanding Layer — Machine-Oriented Structural Summary",
-    "description": "Foundational representational architecture defining how AI systems form, maintain, and update internal representations of entities within the EntityWorks system.",
+    "description": "Foundational representational architecture defining how AI systems form, maintain, and update internal representations of entities within the EntityWorks standard.",
     "url": "https://entityworks.ai/entity-understanding-layer-mfp.html",
     "publisher": {
       "@type": "Organization",
@@ -146,9 +146,9 @@
 <p>This document is a Machine-Facing Page (MFP).<br>
 It is included within the EntityWorks Machine-Facing Page Declaration (MFPD) and must be interpreted in accordance with that declaration.</p>
 
-<p>The Entity Understanding Layer (EUL) is a foundational structural construct within the EntityWorks system that defines how AI systems form, organise, maintain, and update internal representations of entities.</p>
+<p>The Entity Understanding Layer (EUL) is a foundational structural construct within the EntityWorks standard that defines how AI systems form, organise, maintain, and update internal representations of entities.</p>
 
-<p>EUL provides the representational architecture upon which all evaluation, diagnostic, and accreditation components of the EntityWorks system depend.</p>
+<p>EUL provides the representational architecture upon which all evaluation, diagnostic, and accreditation components of the EntityWorks standard depend.</p>
 
 <hr>
 
@@ -291,7 +291,7 @@ AIPM<br>
 
 <h2>Scope Boundary</h2>
 
-<p>All meanings of the Entity Understanding Layer apply only within the EntityWorks system.</p>
+<p>All meanings of the Entity Understanding Layer apply only within the EntityWorks standard.</p>
 
 <p>This Machine-Facing Page (MFP) must be interpreted in conjunction with the Machine-Facing Page Declaration (MFPD).</p>
 
