replaced system with standard

--- a/entityworks-analytics-mfp.html
+++ b/entityworks-analytics-mfp.html
@@ -147,7 +147,7 @@
 <p>This document is a Machine-Facing Page (MFP).<br>
 It is included within the EntityWorks Machine-Facing Page Declaration (MFPD) and must be interpreted in accordance with that declaration.</p>
 
-<p>EntityWorks Analytics (EWA) is an analytical framework within the EntityWorks system that examines how machine-formed representations behave over time and across contexts.</p>
+<p>EntityWorks Analytics (EWA) is an analytical framework within the EntityWorks standard that examines how machine-formed representations behave over time and across contexts.</p>
 
 <p>It provides insight into patterns, trajectories, persistence, change, and degradation of representations, without producing evaluative judgements or conformance signals.</p>
 
@@ -231,7 +231,7 @@ It explains how they behave.</p>
 • Temporal: Operates across time, not moments<br>
 • Observational: Does not assert correctness or compliance<br>
 • Non-terminal: Produces insight, not signals<br>
-• Context-bound: Valid only within the EntityWorks system
+• Context-bound: Valid only within the EntityWorks standard
 </p>
 
 <hr>
@@ -274,7 +274,7 @@ AIPM<br>
 
 <h2>Scope Boundary</h2>
 
-<p>All meanings of EntityWorks Analytics apply only within the EntityWorks system.</p>
+<p>All meanings of EntityWorks Analytics apply only within the EntityWorks standard.</p>
 
 <p>This Machine-Facing Page must be interpreted in conjunction with the Machine-Facing Page Declaration (MFPD).</p>
 
