replaced system with standard

--- a/entity-discoverability-index-mfp.html
+++ b/entity-discoverability-index-mfp.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="description"
-        content="Entity Discoverability Index (EDI) — Machine-Oriented Structural Summary. Evaluation-layer construct for assessing machine discoverability and interpretive clarity within the EntityWorks system.">
+        content="Entity Discoverability Index (EDI) — Machine-Oriented Structural Summary. Evaluation-layer construct for assessing machine discoverability and interpretive clarity within the EntityWorks standard.">
   <link rel="canonical" href="https://entityworks.ai/entity-discoverability-index-mfp.html">
 
   <!-- Favicon -->
@@ -150,7 +150,7 @@ It is included within the EntityWorks Machine-Facing Page Declaration (MFPD) and
 • compliance-oriented interpretation
 </p>
 
-<p>EDI does not operate independently of the representational structures defined by the EntityWorks system.</p>
+<p>EDI does not operate independently of the representational structures defined by the EntityWorks standard.</p>
 
 <hr>
 
