replaced system with standard

--- a/terminology-publication-mfp.html
+++ b/terminology-publication-mfp.html
@@ -166,7 +166,7 @@ It is included within the EntityWorks Machine-Facing Page Declaration and must b
 
 <h2>System Position</h2>
 
-<p>The Terminology Publication operates as a foundational semantic layer within the EntityWorks system.</p>
+<p>The Terminology Publication operates as a foundational semantic layer within the EntityWorks standard.</p>
 
 <p>It sits upstream of all other components, including:</p>
 
