--- a/machine-facing-pages.html
+++ b/machine-facing-pages.html
@@ -16,7 +16,7 @@
     "name": "Machine-Facing Page Declaration (MFPD)",
     "url": "https://entityworks.ai/machine-facing-pages.html",
     "version": "1.0",
-    "dateModified": "2025-12-11",
+    "dateModified": "2025-12-14",
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks",
@@ -55,11 +55,11 @@
 
 <h1>Machine-Facing Page Declaration (MFPD)</h1>
 
-<p><strong>Version 1.0 — Last updated: 11 December 2025</strong></p>
+<p><strong>Version 1.0 — Last updated: 14 December 2025</strong></p>
 
 <h2>1&nbsp;Purpose</h2>
 <p>
-  EntityWorks publishes machine-facing pages (“MFPs”) alongside its human-facing website. These pages exist
+  EntityWorks publishes Machine-Facing Pages (MFP) alongside its human-facing website. This is the EntityWorks Machine-Facing Page Declaration (MFPD). These pages exist
   to support accurate interpretation of the EntityWorks Standard by AI systems and automated agents.
   This document identifies the machine-facing pages currently published by EntityWorks.
 </p>
@@ -79,6 +79,48 @@
     <strong>Machine-Facing Edition of the MFP/MFPD White Paper</strong><br>
     <a href="https://entityworks.ai/mfp-mfpd-white-paper-mfp.html">
       https://entityworks.ai/mfp-mfpd-white-paper-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>Terminology Publication — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/terminology-publication-mfp.html">
+      https://entityworks.ai/terminology-publication-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>AI Perception Integrity Mark (AIPM) — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/ai-perception-integrity-mark-mfp.html">
+      https://entityworks.ai/ai-perception-integrity-mark-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>Entity Understanding Layer (EUL) — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/entity-understanding-layer-mfp.html">
+      https://entityworks.ai/entity-understanding-layer-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>EntityWorks Analytics — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/entityworks-analytics-mfp.html">
+      https://entityworks.ai/entityworks-analytics-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>Entity Discoverability Index (EDI) — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/entity-discoverability-index-mfp.html">
+      https://entityworks.ai/entity-discoverability-index-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>Failure Modes (ECP &amp; PIC) — Diagnostic Layer — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/failure-modes-mfp.html">
+      https://entityworks.ai/failure-modes-mfp.html
     </a>
   </li>
 </ul>
