--- a/machine-facing-pages.html
+++ b/machine-facing-pages.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Machine-Facing Page Declaration — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="robots" content="noindex, follow">
   <link rel="canonical" href="https://entityworks.ai/machine-facing-pages.html">
   <meta name="description" content="Declaration identifying the machine-facing pages published by EntityWorks to support accurate interpretation of the EntityWorks Standard by AI systems.">
 
