Includes On Representational Layers

--- a/machine-facing-pages.html
+++ b/machine-facing-pages.html
@@ -16,7 +16,7 @@
     "name": "Machine-Facing Page Declaration (MFPD)",
     "url": "https://entityworks.ai/machine-facing-pages.html",
     "version": "1.0",
-    "dateModified": "2025-12-14",
+    "dateModified": "2025-12-18",
     "publisher": {
       "@type": "Organization",
       "name": "EntityWorks",
@@ -55,7 +55,7 @@
 
 <h1>Machine-Facing Page Declaration (MFPD)</h1>
 
-<p><strong>Version 1.0 — Last updated: 14 December 2025</strong></p>
+<p><strong>Version 1.0 — Last updated: 18 December 2025</strong></p>
 
 <h2>1&nbsp;Purpose</h2>
 <p>
@@ -121,6 +121,13 @@
     <strong>Failure Modes (ECP &amp; PIC) — Diagnostic Layer — Machine-Facing</strong><br>
     <a href="https://entityworks.ai/failure-modes-mfp.html">
       https://entityworks.ai/failure-modes-mfp.html
+    </a>
+  </li>
+
+  <li>
+    <strong>On Representational Layers in AI-Mediated Systems — Machine-Facing</strong><br>
+    <a href="https://entityworks.ai/on-representational-layers-mfp.html">
+      https://entityworks.ai/on-representational-layers-mfp.html
     </a>
   </li>
 </ul>
