--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
 <main>
 
   <section>
+      <p>
+  <strong>EntityWorks exists to name and clarify how AI systems form, stabilise, and act upon representations of people, organisations, relationships, and ideas, so that this representational layer can be understood, discussed, and referenced with precision.</strong>
+</p>
     <h1>The EntityWorks Standard</h1>
     <p>
-      The EntityWorks Standard is a structured document designed to help digital publishers prepare their work for entry into AI systems. The Standard brings together definitions, frameworks, and conceptual tools to help publishers move from uncertainty to confident, AI-ready digital publishing. Across the Standard, the focus is on helping publishers express clear intent in their digital material, and on reducing the gaps that appear when AI systems ingest and interpret that material.
+      The EntityWorks Standard is a structured document designed to help digital publishers prepare their work for entry into AI systems. The Standard brings together definitions, frameworks, and conceptual tools that provide a structured reference for preparing digital material for entry into AI systems. Its focus is on the clear expression of intent in published material and on reducing interpretive gaps that arise when AI systems ingest and act upon that material.
     </p>
     <p>
       Within its scope, the Standard addresses the structured preparation of information for AI systems. This includes the clarity of published material, the organisation of machine-visible content, and the use of transparent mechanisms that help reduce representational risk and support consistent interpretation.
     </p>
     <p>
       Machine-Facing Pages and the Machine-Facing Page Declaration form one part of this broader framework. These components are described within the Standard to help organisations classify, document, and disclose the use of pages that exist outside normal human-visible navigation.
-    </p>
-    <p>
-      Training based on the EntityWorks Standard is delivered by licensed third-party organisations. These providers may use a range of delivery methods, including AI-driven formats, to help individuals and teams understand and apply the Standard. EntityWorks develops and maintains the underlying material and licenses approved organisations to use it when delivering instruction.
     </p>
   </section>
 
@@ -182,7 +182,7 @@
       The Machine-Facing Page Declaration (MFPD) is a short statement that explains why an organisation uses Machine-Facing Pages and what those pages are intended to do. It makes the purpose of this material visible so that AI systems, regulators, and human stakeholders all understand the organisation’s entire digital publishing footprint.
     </p>
     <p>
-      Within the EntityWorks Standard, the MFPD is documented as a voluntary transparency measure that organisations can use to support clarity and open communication when publishing material that is not typically encountered through a site’s human-facing structure. EntityWorks provides guidance on how the MFPD can be prepared and used as part of a transparent digital publishing approach.
+      Within the EntityWorks Standard, the MFPD is documented as a voluntary transparency measure that organisations can use to support clarity and open communication when publishing material that is not typically encountered through a site’s human-facing structure. Within the Standard, the preparation and use of the Machine-Facing Page Declaration (MFPD) is documented as a transparency mechanism for describing the purpose and scope of machine-facing material within a digital publishing environment.
     </p>
   </section>
 
